Remove user domain service