@@ -1,20 +1,18 @@
 package com.ecommerce.user.infrastructure.repository;
 
 import com.ecommerce.shared.api.pageable.PageRequestCreator;
-import com.ecommerce.user.infrastructure.mappers.UserEntityMapper;
+import com.ecommerce.shared.domain.valueobjects.PageResponseDomain;
 import com.ecommerce.user.domain.repositories.UserDomainRepository;
 import com.ecommerce.user.domain.valueobjects.UserDomain;
 import com.ecommerce.user.domain.valueobjects.UserPageDomain;
 import com.ecommerce.user.domain.valueobjects.UserReqFilterDomain;
-import com.ecommerce.shared.domain.valueobjects.PageResponseDomain;
 import com.ecommerce.user.infrastructure.mappers.UserDomainMapper;
+import com.ecommerce.user.infrastructure.mappers.UserEntityMapper;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
-
-import java.util.stream.Collectors;
 
 
 /**
@@ -74,7 +72,7 @@ public class UserDomainRepositoryImpl implements UserDomainRepository {
         );
         var customers = customerPageable.getContent()
                 .stream().map(UserDomainMapper::convertFromEntity)
-                .collect(Collectors.toList());
+                .toList();
 
         var pageResponseDomain = new PageResponseDomain(customerPageable.getTotalElements(),
                 customerPageable.getTotalPages());
